--- a/waf/stage/ec2.yaml
+++ b/waf/stage/ec2.yaml
@@ -23,4 +23,4 @@ Resources:
       KeyName: cf-demo
       Tags:
         - Key: Name
-          Value: MyEC2Instance
+          Value: MyEC2Instance-stage
